<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    app:cardCornerRadius="@dimen/cardview_default_elevation"
    app:cardElevation="@dimen/cardview_default_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/articleImage"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/articleAuthor"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:text="@string/author"
            android:maxLines="1"
            android:ellipsize="marquee"
            app:layout_constraintEnd_toEndOf="@id/articleImage"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/articleImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/articleTitle"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/articleImage"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/articleDescription"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/description"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/articleImage"
            app:layout_constraintTop_toBottomOf="@+id/articleTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
